# lermontovization-api

./: .env.local.default  .env.test.default  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  yoyo.ini
settings/: db.conf
src/: deps.py  main.py  router.py  settings.py
src/api/v1/: router.py
src/api/v1/controller/: lermontovization.py
src/database/: migrate.py
src/database/migrations/: 20251209_01_NYP5u-create-text-transformations-table.py  20251213_01_cWIyN-add-autogenerate-uuid-to-id-column.py  20251215_01_Xm8rb-add-a-new-active-column-to-texts-table.py
src/models/: text_transformation.py
src/repositories/: text_transformations.py
src/schemes/: texts.py
src/services/: lermontovization.py  tags.py
tests/: conftest.py
tests/api/: test_lermontovizate_endpoints.py
tests/fixtures/: api_client.py  make_text_transformation.py  repositories.py  services.py
tests/integration/: test_text_transformations_repo.py
tests/unit/services/: test_lermontovization.py
