[project]
name = "lermontovization-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "databases[asyncpg]>=0.9.0",
    "fastapi>=0.121.3",
    "natasha>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pyhocon>=0.3.61",
    "pymorphy2>=0.9.1",
    "pymorphy2-dicts-ru>=2.4.417127.4579844",
    "setuptools<81",
    "uvicorn>=0.38.0",
    "yoyo-migrations>=9.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]
tests = [
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
